try github action ubuntu-latest

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build_and_test:
     name: Build and Test
+    runs-on: ubuntu-latest
     container:
       image: echolabs/robotcoretest:latest
 
