--- a/rpc/examples/echo/frontend/package.json
+++ b/rpc/examples/echo/frontend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "core-rpc-echo-example",
+  "name": "@viamrobotics/rpc-echo-example",
   "version": "0.1.0",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "google-protobuf": "^3.14.0",
     "@improbable-eng/grpc-web": "^0.13.0",
@@ -15,6 +15,6 @@
     "concurrently": "^5.3.0",
     "ts-loader": "^8.0.14",
     "ts-protoc-gen": "^0.14.0",
-    "typescript": "4.1.3"
+    "typescript": "^4.1.3"
   }
 }
