--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -10,7 +10,7 @@
     "@types/google-protobuf": "^3.7.4",
     "ts-loader": "^8.0.14",
     "ts-protoc-gen": "^0.14.0",
-    "typescript": "4.1.3",
+    "typescript": "^4.1.3",
     "webpack-cli": "^4.7.2"
   },
   "main": "dist/main.js",
