--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -11,7 +11,8 @@
     "ts-loader": "^8.0.14",
     "ts-protoc-gen": "^0.14.0",
     "typescript": "^4.1.3",
-    "webpack-cli": "^4.7.2"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "main": "dist/main.js",
   "types": "src/index.d.ts",
