--- a/rpc/examples/echo/frontend/package.json
+++ b/rpc/examples/echo/frontend/package.json
@@ -8,6 +8,7 @@
     "google-protobuf": "^3.14.0"
   },
   "devDependencies": {
+    "ansi-regex": ">=5.0.1",
     "@webpack-cli/serve": "^1.3.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.7.2",
