--- a/rpc/examples/echo/frontend/package.json
+++ b/rpc/examples/echo/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "ansi-regex": ">=5.0.1",
+    "set-value": ">=4.0.1",
     "@webpack-cli/serve": "^1.3.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.7.2",
