rpc: add fileupload example

--- a/buf.yaml
+++ b/buf.yaml
@@ -6,6 +6,7 @@ build:
   excludes:
     - vendor
     - rpc/examples/echo/frontend/node_modules
+    - rpc/examples/fileupload/frontend/node_modules
     - rpc/js/node_modules
 lint:
   use:
