--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
         git add .
         chown -R testbot .
         sudo -u testbot bash -lc 'make build goformat'
-        git checkout rpc/examples/echo/frontend/dist rpc/js/dist dist/js
+        git checkout rpc/examples/echo/frontend/dist rpc/examples/fileupload/frontend/dist rpc/js/dist dist/js
         GEN_DIFF=$(git diff)
         if [ -n "$GEN_DIFF" ]; then
             echo '"make build goformat" resulted in changes not in git' 1>&2
