--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,12 @@ jobs:
       with:
         fetch-depth: 2
 
+    - name: Configure git for private modules
+      env:
+        TOKEN: ${{ secrets.GIT_ACCESS_TOKEN }}
+      run: |
+        sudo -u testbot bash -lc "git config --global url.\"https://${TOKEN}@github.com\".insteadOf \"https://github.com\""
+
     - name: Verify no uncommitted changes from build
       run: |
         git init
