--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     name: Build and Test
     runs-on: [self-hosted, x64]
     container:
-      image: echolabs/robotcoretest:latest
+      image: ghcr.io/viamrobotics/test:latest
 
     steps:
 
@@ -21,12 +21,6 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 2
-
-    - name: Configure git for private modules
-      env:
-        TOKEN: ${{ secrets.GIT_ACCESS_TOKEN }}
-      run: |
-        sudo -u testbot bash -lc "git config --global url.\"https://${TOKEN}@github.com\".insteadOf \"https://github.com\""
 
     - name: Verify no uncommitted changes from build
       run: |
