--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
   build_and_test:
     name: Build and Test
     runs-on: [self-hosted, x64]
-    if: github.event == 'workflow_dispatch' || github.event == 'push'
+    if: github.event_name == 'workflow_dispatch' || github.event_name == 'push'
     container:
       image: ghcr.io/viamrobotics/test:latest
 
