--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -64,7 +64,7 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
 
   build_and_test_from_pr: # TODO(erd): reuse above
-    name: Build and Test
+    name: Build and Test (PR)
     runs-on: [self-hosted, x64]
     if: contains(github.event.pull_request.labels.*.name, 'safe to test')
     container:
