add external auth examples

--- a/rpc/examples/echo/Makefile
+++ b/rpc/examples/echo/Makefile
@@ -20,8 +20,24 @@ run_server_auth: build setup_auth
 		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
 		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
 
+run_server_auth_internal: build setup_auth
+	go run server/cmd/main.go -api_key=supersecretkeyohmy \
+		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external_auth_addr=https://localhost:8081
+
+run_server_auth_external: build setup_auth
+	go run server/cmd/main.go -api_key=supersecretkeyohmy \
+		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem 8081
+
 run_client_auth: setup_auth
 	go run client/main.go -api_key=supersecretkeyohmy
+
+run_client_auth_external: setup_auth
+	go run client/main.go -api_key=supersecretkeyohmy -external_auth_addr=localhost:8081
 
 clean:
 	rm -rf frontend/dist
