--- a/rpc/examples/fileupload/Makefile
+++ b/rpc/examples/fileupload/Makefile
@@ -17,5 +17,18 @@ run_server_auth: build setup_auth
 		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
 		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
 
+run_server_auth_internal: build setup_auth
+	go run server/cmd/main.go -api_key=supersecretkeyohmy \
+		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external_auth_addr=https://localhost:8081
+
+run_server_auth_external: build setup_auth
+	go run server/cmd/main.go -api_key=supersecretkeyohmy \
+		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem 8081
+
 clean:
 	rm -rf frontend/dist
