--- a/rpc/examples/echo/frontend/tsconfig.json
+++ b/rpc/examples/echo/frontend/tsconfig.json
@@ -16,10 +16,6 @@
         "es2017.object",
         "dom"
     ],
-    "baseUrl": "./",
-    "paths": {
-      "proto/*": ["../../../../dist/js/proto/*"],
-      "google-rpc/*": ["../../../../dist/js/google/rpc/*"]
-    }
+    "baseUrl": "./"
   }
 }
