--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@viamrobotics/rpc",
-  "version": "0.1.12",
+  "version": "0.1.16",
   "license": "MIT",
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
-    "google-protobuf": "^3.14.0"
+    "google-protobuf": "^3.14.0",
+    "@types/webrtc": "^0.0.31"
   },
   "devDependencies": {
     "set-value": ">=4.0.1",
@@ -18,6 +19,7 @@
   "main": "dist/main.js",
   "types": "src/index.d.ts",
   "scripts": {
+    "prepare": "./etc/prepare.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
