--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,18 +36,14 @@ jobs:
         git init
         git add .
         chown -R testbot .
-        sudo -u testbot bash -lc 'make build goformat'
+        sudo -u testbot bash -lc 'make build lint'
         git checkout rpc/examples/echo/frontend/dist rpc/examples/fileupload/frontend/dist rpc/js/dist dist/js
         GEN_DIFF=$(git diff)
         if [ -n "$GEN_DIFF" ]; then
-            echo '"make build goformat" resulted in changes not in git' 1>&2
+            echo '"make build lint" resulted in changes not in git' 1>&2
             git status
             exit 1
         fi
-
-    - name: Lint
-      run: |
-        sudo -u testbot bash -lc 'make lint'
 
     - name: Test
       env:
@@ -90,18 +86,14 @@ jobs:
         git init
         git add .
         chown -R testbot .
-        sudo -u testbot bash -lc 'make build goformat'
+        sudo -u testbot bash -lc 'make build lint'
         git checkout rpc/examples/echo/frontend/dist rpc/examples/fileupload/frontend/dist rpc/js/dist dist/js
         GEN_DIFF=$(git diff)
         if [ -n "$GEN_DIFF" ]; then
-            echo '"make build goformat" resulted in changes not in git' 1>&2
+            echo '"make build lint" resulted in changes not in git' 1>&2
             git status
             exit 1
         fi
-
-    - name: Lint
-      run: |
-        sudo -u testbot bash -lc 'make lint'
 
     - name: Test
       env:
