update linter settings

--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -55,6 +55,9 @@ issues:
     - path: _test\.go$|^tests/|^samples/
       linters:
         - errcheck
+        - contextcheck
+        - exhaustive
+        - forcetypeassert
         - goconst
         - gosec
         - govet
