rpc: support external auth entities
- Closes #104

--- a/rpc/examples/echo/Makefile
+++ b/rpc/examples/echo/Makefile
@@ -31,13 +31,26 @@ run_server_auth_external: build setup_auth
 	go run server/cmd/main.go -api_key=supersecretkeyohmy \
 		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
 		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem 8081
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external_auth 8081
+
+run_server_auth_internal_as_external: build setup_auth
+	go run server/cmd/main.go -api_key=supersecretkeyohmy \
+		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external_auth_addr=https://localhost:8081 \
+		-external_auth
 
 run_client_auth: setup_auth
 	go run client/main.go -api_key=supersecretkeyohmy
 
 run_client_auth_external: setup_auth
 	go run client/main.go -api_key=supersecretkeyohmy -external_auth_addr=localhost:8081
+
+run_client_auth_external_direct: setup_auth
+	go run client/main.go -api_key=supersecretkeyohmy -external_auth_addr=localhost:8081 -host=localhost:8080 -signaling_server=
 
 clean:
 	rm -rf frontend/dist
