--- a/rpc/examples/fileupload/Makefile
+++ b/rpc/examples/fileupload/Makefile
@@ -28,7 +28,17 @@ run_server_auth_external: build setup_auth
 	go run server/cmd/main.go -api_key=supersecretkeyohmy \
 		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
 		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem 8081
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external_auth 8081
+
+run_server_auth_internal_as_external: build setup_auth
+	go run server/cmd/main.go -api_key=supersecretkeyohmy \
+		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external_auth_addr=https://localhost:8081 \
+		-external_auth
 
 clean:
 	rm -rf frontend/dist
