rpc: Support TLS entity authentication
- Also add mDNS host lookup in dial

--- a/rpc/examples/fileupload/Makefile
+++ b/rpc/examples/fileupload/Makefile
@@ -5,40 +5,40 @@ all: build
 build:
 	cd frontend && npm install && npm link @viamrobotics/rpc && npx webpack
 
-run_server: build
+run-server: build
 	go run server/cmd/main.go
 
-setup_auth:
+setup-auth:
 	cd ${ROOT_DIR} && make setup-cert setup-priv-key
 
-run_server_auth: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
+run-server-auth: build setup-auth
+	go run server/cmd/main.go -api-key=supersecretkeyohmy \
+		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
 
-run_server_auth_internal: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external_auth_addr=https://localhost:8081
+run-server-auth-internal: build setup-auth
+	go run server/cmd/main.go -instance-name=fileupload-server -api-key=supersecretkeyohmy \
+		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external-auth-addr=https://localhost:8081
 
-run_server_auth_external: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external_auth 8081
+run-server-auth-external: build setup-auth
+	go run server/cmd/main.go -instance-name=fileupload-server-external -api-key=supersecretkeyohmy \
+		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external-auth 8081
 
-run_server_auth_internal_as_external: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
-		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external_auth_addr=https://localhost:8081 \
-		-external_auth
+run-server-auth-internal-as-external: build setup-auth
+	go run server/cmd/main.go -api-key=supersecretkeyohmy \
+		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external-auth-addr=https://localhost:8081 \
+		-external-auth
 
 clean:
 	rm -rf frontend/dist
