--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -27,6 +27,7 @@ linters:
     - interfacer
     - ireturn
     - maligned
+    - makezero
     - nestif
     - nlreturn
     - paralleltest
@@ -48,6 +49,10 @@ linters-settings:
       - G601
   gci:
     local-prefixes: go.viam.com/utils
+  gomoddirectives:
+    replace-allow-list:
+      - github.com/grandcat/zeroconf
+      - github.com/pion/ice/v2
 issues:
   exclude:
     - composites
