--- a/rpc/examples/echo/Makefile
+++ b/rpc/examples/echo/Makefile
@@ -5,52 +5,63 @@ all: build
 build:
 	cd frontend && npm install && npm link @viamrobotics/rpc && npx webpack
 
-run_server: build
-	go run server/cmd/main.go
+run-server: build
+	go run server/cmd/main.go -instance-name=echo-server
 
-run_client:
-	go run client/main.go -insecure
+run-client:
+	go run client/main.go -host=echo-server
 
-setup_auth:
+setup-auth:
 	cd ${ROOT_DIR} && make setup-cert setup-priv-key
 
-run_server_auth: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
+run-server-auth: build setup-auth
+	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
+		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
 
-run_server_auth_internal: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external_auth_addr=https://localhost:8081
+run-server-auth-tls: build setup-auth
+	go run server/cmd/main.go -instance-name=echo-server \
+		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-tls-auth
 
-run_server_auth_external: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external_auth 8081
+run-server-auth-internal: build setup-auth
+	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
+		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external-auth-addr=https://localhost:8081
 
-run_server_auth_internal_as_external: build setup_auth
-	go run server/cmd/main.go -api_key=supersecretkeyohmy \
-		-auth_public_key=${ROOT_DIR}/etc/test_keys/public-key.pem \
-		-auth_private_key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
-		-tls_cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
-		-tls_key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
-		-external_auth_addr=https://localhost:8081 \
-		-external_auth
+run-server-auth-external: build setup-auth
+	go run server/cmd/main.go -instance-name=echo-server-external -api-key=supersecretkeyohmy \
+		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external-auth 8081
 
-run_client_auth: setup_auth
-	go run client/main.go -api_key=supersecretkeyohmy
+run-server-auth-internal-as-external: build setup-auth
+	go run server/cmd/main.go -instance-name=echo-server -api-key=supersecretkeyohmy \
+		-auth-public-key=${ROOT_DIR}/etc/test_keys/public-key.pem \
+		-auth-private-key=${ROOT_DIR}/etc/test_keys/pkcs8.key \
+		-tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem \
+		-external-auth-addr=https://localhost:8081 \
+		-external-auth
 
-run_client_auth_external: setup_auth
-	go run client/main.go -api_key=supersecretkeyohmy -external_auth_addr=localhost:8081
+run-client-auth: setup-auth
+	go run client/main.go -host=echo-server -api-key=supersecretkeyohmy
 
-run_client_auth_external_direct: setup_auth
-	go run client/main.go -api_key=supersecretkeyohmy -external_auth_addr=localhost:8081 -host=localhost:8080 -signaling_server=
+run-client-auth-tls: setup-auth
+	go run client/main.go -host=echo-server -tls-cert=${ROOT_DIR}/etc/test_keys/localhost/cert.pem \
+		-tls-key=${ROOT_DIR}/etc/test_keys/localhost/key.pem
+
+run-client-auth-external: setup-auth
+	go run client/main.go -host=echo-server -api-key=supersecretkeyohmy -external-auth-addr=localhost:8081
+
+run-client-auth-external-direct: setup-auth
+	go run client/main.go -api-key=supersecretkeyohmy -external-auth-addr=localhost:8081 -host=localhost:8080
 
 clean:
 	rm -rf frontend/dist
