Only run buf push on main fork

--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -9,7 +9,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  buf-push:
+    if: github.repository_owner == 'viamrobotics'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
