--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   buf-push:
     if: github.repository_owner == 'viamrobotics'
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, x64]
     steps:
       - uses: actions/checkout@v2
       - uses: bufbuild/buf-setup-action@v0.7.0
