--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -1,7 +1,7 @@
 name: buf-push
 
 on:
-  # Triggers the workflow on pushes or pull requests for the main branch
+  # Triggers the workflow on pushes to the main branch
   push:
     branches: [ main ]
 
@@ -12,6 +12,8 @@ jobs:
   buf-push:
     if: github.repository_owner == 'viamrobotics'
     runs-on: [self-hosted, x64]
+    container:
+      image: ghcr.io/viamrobotics/test:latest
     steps:
       - uses: actions/checkout@v2
       - uses: bufbuild/buf-setup-action@v0.7.0
