--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -16,7 +16,7 @@ jobs:
     if: github.repository_owner == 'viamrobotics'
     runs-on: [self-hosted, x64]
     container:
-      image: ghcr.io/viamrobotics/test:latest
+      image: ghcr.io/viamrobotics/canon:amd64
     steps:
       - uses: actions/checkout@v2
       - uses: bufbuild/buf-setup-action@v0.7.0
