--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -23,3 +23,22 @@ jobs:
       - uses: bufbuild/buf-push-action@v1
         with:
           buf_token: ${{ secrets.BUF_TOKEN }}
+
+  dispatch:
+    needs: buf-push
+    if: github.repository_owner == 'viamrobotics'
+    runs-on: [self-hosted, x64]
+    container:
+      image: ghcr.io/viamrobotics/canon:amd64
+    strategy:
+      matrix:
+        repo:
+          - 'viamrobotics/python-sdk'
+    steps:
+      - name: Notify Proto Watchers
+        uses: peter-evans/repository-dispatch@v1
+        with:
+          token: ${{ secrets.GIT_ACCESS_TOKEN }}
+          repository: ${{ matrix.repo }}
+          event-type: protos-updated
+          client-payload: '{"repo_name": "${{github.repository}}", "sha": "${{github.sha}}"}'
