--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -1,5 +1,5 @@
 service:
-  golangci-lint-version: 1.43.x
+  golangci-lint-version: 1.46.x
 run:
   deadline: 600s
   skip-dirs:
@@ -11,8 +11,11 @@ run:
 linters:
   enable-all: true
   disable:
+    - containedctx
     - cyclop
     - exhaustivestruct
+    - exhaustruct
+    - forcetypeassert
     - funlen
     - gocognit
     - godox
@@ -26,10 +29,12 @@ linters:
     - gomnd
     - interfacer
     - ireturn
+    - maintidx
     - maligned
     - makezero
     - nestif
     - nlreturn
+    - nonamedreturns
     - paralleltest
     - prealloc
     - scopelint
