Update example makefiles

--- a/rpc/examples/echo/Makefile
+++ b/rpc/examples/echo/Makefile
@@ -3,7 +3,8 @@ all: build
 .PHONY: all
 
 build:
-	cd frontend && npm install && npm link @viamrobotics/rpc && npx webpack
+	export NODE_OPTIONS=--openssl-legacy-provider && node --version 2>/dev/null || unset NODE_OPTIONS;\
+	cd frontend && npm install && npx webpack
 
 run-server: build
 	go run server/cmd/main.go -instance-name=echo-server
