--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -1,7 +1,8 @@
 service:
-  golangci-lint-version: 1.46.x
+  golangci-lint-version: 1.48.x
 run:
-  deadline: 600s
+  deadline: 900s
+  modules-download-mode: readonly
   skip-dirs:
     - genfiles$
     - gen$
@@ -11,8 +12,10 @@ run:
 linters:
   enable-all: true
   disable:
+    - asasalint
     - containedctx
     - cyclop
+    - deadcode
     - exhaustivestruct
     - exhaustruct
     - forcetypeassert
@@ -27,6 +30,9 @@ linters:
     - goimports
     - golint
     - gomnd
+    - ifshort
+    - importas
+    - interfacebloat
     - interfacer
     - ireturn
     - maintidx
@@ -34,12 +40,16 @@ linters:
     - makezero
     - nestif
     - nlreturn
+    - nosnakecase
     - nonamedreturns
+    - nosprintfhostport
     - paralleltest
     - prealloc
     - scopelint
+    - structcheck
     - tagliatelle
     - testpackage
+    - varcheck
     - varnamelen
     - wrapcheck
     - wsl
