--- a/etc/buf.web.gen.yaml
+++ b/etc/buf.web.gen.yaml
@@ -1,15 +1,6 @@
 version: v1
 plugins:
-  - name: js
-    out: dist/js
-    opt:
-      - import_style=commonjs
-  - name: grpc-web
-    out: dist/js
-    opt:
-      - import_style=commonjs
-      - mode=grpcwebtext
   - name: ts
-    out: dist/js
-    opt:
-      - service=grpc-web
+    out: rpc/js/src/gen
+    opt: generate_dependencies,force_optimize_code_size,long_type_string,ts_nocheck
+    path: ./rpc/js/node_modules/@protobuf-ts/plugin/bin/protoc-gen-ts
