--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 # Dependency directories (remove the comment below to include it)
 vendor/
 
+# editors
+.vscode
+
 # gRPC/Protocol Buffers
 bin
 dist/*
