--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.22",
   "license": "MIT",
   "dependencies": {
-    "@protobuf-ts/grpc-transport": "^2.8.0",
+    "@improbable-eng/grpc-web": "^0.13.0",
+    "google-protobuf": "^3.14.0",
     "@types/webrtc": "^0.0.31"
   },
   "devDependencies": {
-    "@protobuf-ts/grpcweb-transport": "^2.7.0",
-    "@protobuf-ts/plugin": "^2.7.0",
     "set-value": ">=4.0.1",
+    "@types/google-protobuf": "^3.7.4",
     "ts-loader": "^8.0.14",
+    "ts-protoc-gen": "^0.14.0",
     "typescript": "^4.1.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^4.7.2"
@@ -18,7 +19,6 @@
   "main": "dist/main.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "build": "webpack",
     "prepare": "./etc/prepare.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
