--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -1,25 +1,27 @@
 {
   "name": "@viamrobotics/rpc",
-  "version": "0.1.22",
+  "version": "0.1.23",
   "license": "Apache-2.0",
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
-    "google-protobuf": "^3.14.0",
-    "@types/webrtc": "^0.0.31"
+    "google-protobuf": "^3.14.0"
   },
   "devDependencies": {
-    "set-value": ">=4.0.1",
     "@types/google-protobuf": "^3.7.4",
-    "ts-loader": "^8.0.14",
+    "set-value": ">=4.0.1",
+    "ts-loader": "^9.4.1",
     "ts-protoc-gen": "^0.14.0",
-    "typescript": "^4.1.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^4.7.2"
+    "typescript": "^4.8.4",
+    "vite": "^3.1.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "main": "dist/main.js",
   "types": "src/index.d.ts",
   "scripts": {
     "prepare": "./etc/prepare.sh",
+    "typecheck": "tsc --noEmit",
+    "build": "tsc && vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
