--- a/rpc/js/tsconfig.json
+++ b/rpc/js/tsconfig.json
@@ -1,22 +1,52 @@
 {
   "compilerOptions": {
-    "alwaysStrict": true,
-    "sourceMap": true,
-    "target": "es5",
+    "target": "ESNext",
+    "module": "ESNext",
+    "useDefineForClassFields": true,
     "declaration": true,
-    "removeComments": true,
-    "noImplicitReturns": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "skipLibCheck": true,
     "stripInternal": true,
-    "noFallthroughCasesInSwitch": true,
-    "noEmitOnError": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "noEmitOnError": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "types": [],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "noUncheckedIndexedAccess": true,
+    "noImplicitOverride": true,
+    "forceConsistentCasingInFileNames": true,
+    "importsNotUsedAsValues": "error",
+    "sourceMap": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+    },
     "lib": [
-        "es2015",
-        "es2017.object",
-        "dom"
-    ],
-    "baseUrl": "./"
-  }
+      "ESNext",
+      "DOM",
+      "DOM.iterable",
+      "scripthost"
+    ]
+  },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
 }
