Revert "try just pull_request_target with no labeling"
This reverts commit 2d822061304ad92389fbfe6ad29cff03b8fb9ffe.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
         fetch-depth: 2
 
     - name: Check out PR branch code
-      if: github.event_name == 'pull_request_target'
+      if: contains(github.event.pull_request.labels.*.name, 'safe to test')
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
