--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         fetch-depth: 2
 
     - name: Check out PR branch code
-      if: contains(github.event.pull_request.labels.*.name, 'safe to test')
+      if: github.event.label.name == 'safe to test' && contains(github.event.pull_request.labels.*.name, 'safe to test')
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
