--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,9 @@ jobs:
       image: ghcr.io/viamrobotics/canon:amd64-cache
       options: --platform linux/amd64
     timeout-minutes: 20
+    if: |
+      github.event_name == 'workflow_dispatch' || github.event_name == 'push' || 
+      (github.event_name == 'pull_request_target' && github.event.label.name == 'safe to test' && contains(github.event.pull_request.labels.*.name, 'safe to test'))
 
     steps:
     - name: Check out main branch code
@@ -25,7 +28,7 @@ jobs:
         fetch-depth: 2
 
     - name: Check out PR branch code
-      if: github.event.label.name == 'safe to test' && contains(github.event.pull_request.labels.*.name, 'safe to test')
+      if: github.event_name == 'pull_request_target'
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
