--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         uses: jamessingleton/is-organization-member@1.0.1
         with:
           organization: viamrobotics
-          username: ${{ github.event.issue.user.login }}
+          username: ${{ github.actor }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Always add label
         if: |
