try test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
           username: ${{ github.actor }}
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: debug
-        run: echo ${{ steps.is_organization_member.outputs }}
+        run: echo ${{ steps.is_organization_member.outputs.result }}
       - name: Always add label
         if: |
           steps.is_organization_member.outputs.result == true
