--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'pull_request_target'
-    #   contains(fromJson('["opened", "synchronize", "reopened"]'), github.event.pull_request.action)
+      contains(fromJson('["opened", "synchronize", "reopened"]'), github.event.pull_request_target.action)
     steps:
       - name: Check if organization member
         id: is_organization_member
