--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'pull_request_target' &&
-      contains(fromJson('["opened", "synchronize", "reopened"]'), github.event.pull_request_target.action)
+      (github.event.pull_request_target.action == 'opened' ||
+      github.event.pull_request_target.action == 'synchronize' ||
+      github.event.pull_request_target.action == 'reopened')
     steps:
       - name: Check if organization member
         id: is_organization_member
