--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,9 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       github.event_name == 'pull_request_target' &&
-      (github.event.action == 'opened' ||
-      github.event.action == 'synchronize' ||
-      github.event.action == 'reopened')
+      (contains(fromJson('["opened", "synchronize", "reopened"]'), github.event.action)
     steps:
       - name: Check if organization member
         id: is_organization_member
