--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -34,7 +34,7 @@ jobs:
           add-labels: "safe to test"
       - name: Add Unsafe PR Comment
         if: |
-          steps.is_organization_member.outputs.result == 'true'
+          steps.is_organization_member.outputs.result == 'false'
         uses: marocchino/sticky-pull-request-comment@v2.2.0
         with:
           recreate: true
