--- a/rpc/js/package.json
+++ b/rpc/js/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@viamrobotics/rpc",
-  "version": "0.1.24",
+  "version": "0.1.25",
   "license": "Apache-2.0",
   "dependencies": {
     "@improbable-eng/grpc-web": "^0.13.0",
@@ -11,12 +11,13 @@
     "set-value": ">=4.0.1",
     "ts-loader": "^9.4.1",
     "ts-protoc-gen": "^0.14.0",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4",
     "vite": "^3.1.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
-  "main": "dist/main.js",
+  "main": "dist/main.mjs",
   "types": "src/index.d.ts",
   "scripts": {
     "prepare": "./etc/prepare.sh",
