--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,28 +1,28 @@
-### Temporarily turned off due to an issue in CI.
-### See: https://github.com/viamrobotics/goutils/actions/runs/3207545693/jobs/5242534039
+name: NPM Publish
 
-# name: NPM Publish
+on:
+  push:
+    branches:
+      - main
 
-# on:
-#   push:
-#     branches:
-#       - main
+jobs:
+  publish:
+    runs-on: [x64, qemu-host]
+    container:
+      image: ghcr.io/viamrobotics/canon:amd64-cache
+      options: --platform linux/amd64
 
-# jobs:
-#   publish:
-#     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v2.4.0
+        with:
+          persist-credentials: false
 
-#     steps:
-#       - name: Checkout 🛎️
-#         uses: actions/checkout@v2.4.0
-#         with:
-#           persist-credentials: false
+      - name: Install and Build 🔧
+        run: |
+          make build-web
 
-#       - name: Install and Build 🔧
-#         run: |
-#           make build-web
-
-#       - name: Publish 🚀
-#         uses: JS-DevTools/npm-publish@v1
-#         with:
-#           token: ${{ secrets.NPM_TOKEN }} 
+      - name: Publish 🚀
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }} 
