--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -1,5 +1,5 @@
 service:
-  golangci-lint-version: 1.48.x
+  golangci-lint-version: 1.50.x
 run:
   deadline: 900s
   modules-download-mode: readonly
@@ -49,6 +49,7 @@ linters:
     - structcheck
     - tagliatelle
     - testpackage
+    - thelper # false positives
     - varcheck
     - varnamelen
     - wrapcheck
