--- a/etc/.golangci.yaml
+++ b/etc/.golangci.yaml
@@ -1,5 +1,5 @@
 service:
-  golangci-lint-version: 1.50.x
+  golangci-lint-version: 1.51.x
 run:
   deadline: 900s
   modules-download-mode: readonly
@@ -38,6 +38,7 @@ linters:
     - maintidx
     - maligned
     - makezero
+    - musttag
     - nestif
     - nlreturn
     - nosnakecase
