RSDK-906: Upload test result and coverage data into a MDB backend.
The goutils repository can currently output code coverage data into a file that
is slurped into a Github PR comment. This patch moves that code into test
executaion rather than being contained as a github action. That change will
result in an additional coverage file, `code-coverage-results.md` (gitignored)
to be created in the goutils repo root when running `make cover`.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       options: --platform linux/amd64
     timeout-minutes: 20
     if: |
-      github.event_name == 'workflow_dispatch' || github.event_name == 'push' || 
+      github.event_name == 'workflow_dispatch' || github.event_name == 'push' ||
       (github.event_name == 'pull_request_target' && github.event.label.name == 'safe to test' && contains(github.event.pull_request.labels.*.name, 'safe to test'))
 
     steps:
@@ -64,20 +64,7 @@ jobs:
       run: |
         sudo -u testbot bash -lc 'echo "${{ secrets.ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS }}" | base64 -d > artifact_google_creds.json'
         export ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS=`pwd`/artifact_google_creds.json
-        sudo -u testbot --preserve-env=ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS,TEST_MONGODB_URI bash -lc 'make cover'
-
-    - name: Code Coverage Summary Report
-      uses: edaniels/CodeCoverageSummary@v1.2.3
-      with:
-        filename: coverage.xml
-        badge: true
-        fail_below_min: false
-        format: markdown
-        hide_branch_rate: true
-        hide_complexity: true
-        indicators: true
-        output: both
-        thresholds: '50 70'
+        sudo -u testbot --preserve-env=ARTIFACT_GOOGLE_APPLICATION_CREDENTIALS,TEST_MONGODB_URI,MONGODB_TEST_OUTPUT_URI bash -lc 'make cover'
 
     - name: Add Coverage PR Comment
       uses: marocchino/sticky-pull-request-comment@v2.2.0
@@ -86,4 +73,3 @@ jobs:
         recreate: true
         path: code-coverage-results.md
         GITHUB_TOKEN: ${{ secrets.GIT_ACCESS_TOKEN }}
-
